@@ -28,6 +28,6 @@ side = "BOTH"
 [[dependencies."${mod_id}"]]
 modId = "cbwchilipeppersandfoods"
 mandatory = true
-versionRange = "[1.0.0,)"
+versionRange = "[1.1.1,)"
 ordering = "AFTER"
 side = "BOTH"
