@@ -31,7 +31,7 @@ side = "BOTH"
 [[dependencies."${mod_id}"]]
 modId = "cbwchilipeppersandfoods"
 type = "required"
-versionRange = "[1.0.0,)"
+versionRange = "[1.1.1,)"
 ordering = "AFTER"
 side = "BOTH"
 
