@@ -7,6 +7,7 @@
 - Add critical hit to chili bullet. It has a 10% chance of occurring and dealing 22 damage.
 
 ### Changed
+- Require CBW Chili Peppers and Foods v1.1.1+.
 - Guns with custom names will now have reduced chance of durability reduction.
 
 ## [2.0.0-beta.1]
